# BetterCorrectFast

./: .gitignore  LICENSE  README.md  debug.bcf  pyproject.toml  requirements.txt  setup.py
better_correct_fast/: __init__.py  bcf_three.py  bcf_two.py  hello.py
bettercorrectfast/: __init__.py  bcf_two.py
bettercorrectfast/bcf/agnostic/: extensions.py
bettercorrectfast/bcf/v2/: visinfo.py
tests/: test_create.py  test_hello.py
