[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercorrectfast"  # Ensure this matches the import statement
version = "0.1.2"
description = "Simplified BIM Collaboration Format (BCF) generation for project leaders and managers"
authors = [
    { name = "Boy d'Hont", email = "contact@bdhont.net" },
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "ifcopenshell",  # Required dependency
]

[tool.setuptools]
packages = ["bettercorrectfast"]
package-dir = {"" = "bettercorrectfast"}
package-data = { "bettercorrectfast" = ["assets/*"] }