[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercorrectfast"  # Ensure this matches the import statement
version = "0.1.5"
description = "Simplified BIM Collaboration Format (BCF) generation for project leaders and managers"
authors = [
    { name = "Boy d'Hont", email = "contact@bdhont.net" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "xsdata",
    "numpy",
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["bettercorrectfast*"]  # package names should match these glob patterns (["*"] by default)